5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3998/executions/1592_2426.log
== TEST (2019-04-13 15:41:07) 
-- CODE:
t = float(input("distacia: "))
v = float(input("quantidade de litros: "))

x = t*V
y = t*12
print (x)
print (y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = t*V
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:47:07) 
-- CODE:
t = float(input("tempo: "))
v = float(input("velocidade: "))

x = t*V
y = x * 12
print (x)
print (y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = t*V
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:52:47) 
-- CODE:
t = float(input("tempo: "))
v = float(input("velocidade: "))

x = (t * V)
y = (x * 12)
print (x)
print (y)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    x = (t * V)
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:54:52) 
-- CODE:
t = float(input("tempo: "))
v = float(input("velocidade: "))

x = (t * v)
y = (x * 12)
print (x)
print (y)
-- OUTPUT:
900.0
10800.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-13 15:56:04) 
-- CODE:
t = float(input("tempo: "))
v = float(input("velocidade: "))

x = (t * v)
y = (x / 12)
print (x)
print (y)
-- OUTPUT:
900.0
75.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-13 15:57:21) 
-- CODE:
t = float(input("tempo: "))
v = float(input("velocidade: "))

x = (t * v)
y = (x / 12)
print (x)
print (y)
-- EXECUTION TIME:
0.164852
-- TEST CASE 1:
---- input:
9
100
---- correct output:
900.0
75.0
---- user output:
900.0
75.0
-- TEST CASE 2:
---- input:
5
120

---- correct output:
600.0
50.0

---- user output:
600.0
50.0
-- TEST CASE 3:
---- input:
1.2
80
---- correct output:
96.0
8.0

---- user output:
96.0
8.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
